--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css">
     <!-- favicon icon -->
-    <link rel="icon" type="image/png" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/favicon-16x16.png"/>
+    <link rel="icon" type="image/png" href="./images/favicon.ico"/>
     <title>Bootstrap5 Template</title>
   </head>
   <body>
