--- a/index.html
+++ b/index.html
@@ -8,12 +8,103 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css">
+
+    <!--google font-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <!-- favicon icon -->
     <link rel="icon" type="image/png" href="./images/favicon.ico"/>
     <title>Bootstrap5 Template</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+      <div class="header-bg px-3">
+        <div class="d-flex justify-content-center pt-3"><img src="./images/logo.png" alt="" srcset=""></div>
+        <nav class="horizontal-navbar py-4">
+          <a class="" aria-current="page" href="javascript:void(0)">Demographics</a>
+          <a class="" href="javascript:void(0)">Health History</a>
+          <a class="active" href="javascript:void(0)">Pharmacy</a>
+          <a class="" href="javascript:void(0)">Video Consultation</a>
+          <a class="" href="javascript:void(0)">Checkout</a>
+        </nav>
+      </div>
+    </header>
+
+    <main class="space">
+      <section class="container">
+        <div class="d-flex">
+          <div class="px-2"><img src="./images/cross.svg" alt="" srcset=""></div>
+          <h4 class="heading">How would you like to receive your medication?</h4>
+        </div>
+
+        <div class="row gx-3">
+          <div class="col-6">
+            <div class="box text-center">
+              <div class="mb-3"><img src="./images/pharmacy-building.svg" alt=""></div>
+              <p class="fw-bold">Send to my pharmacy</p>
+              <div><img src="./images/info.svg" alt=""></div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="box text-center">
+              <div class="mb-3"><img src="./images/feather-home.svg" alt=""></div>
+              <p class="fw-bold">Deliver to my address</p>
+              <!-- Button trigger modal -->
+              <button type="button" class="btn pricing-btn shadow-none" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                (See pricing)
+                <img src="./images/angle-double-down.svg" alt="" srcset="">
+              </button>
+
+              <!-- Modal -->
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content modal-content--radius">
+                    <div class="modal-header modal-header--bg">
+                      <h5 class="modal-title modal-title--text" id="exampleModalLabel">Medication Price List</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <div class="price-list">
+                        <div class="d-flex justify-content-between">
+                          <p>Paracetamol</p>
+                          <p>$10.00</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                          <p>Tylenol</p>
+                          <p>$5.00</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                          <p>Lisinopril</p>
+                          <p>$9.00</p>
+                        </div>
+                        <hr/>
+                        <h6 class="text-start ">Delivery options</h6>
+                        <div class="d-flex justify-content-between">
+                          <p>Same day</p>
+                          <p>$30.00</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                          <p>Next day</p>
+                          <p>$10.00</p>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                          <p>2-5 days</p>
+                          <p class="free">FREE</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="modal-footer border-top-0">
+                      <button type="button" class="btn btn-ok" data-bs-dismiss="modal">Ok</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--Modal-end-->
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
