--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <!-- favicon icon -->
     <link rel="icon" type="image/png" href="./images/favicon.ico"/>
-    <title>Bootstrap5 Template</title>
+    <title>CallOnDoc</title>
   </head>
   <body>
     <header>
       <div class="header-bg px-3">
         <div class="d-flex justify-content-center pt-3"><img src="./images/logo.png" alt="" srcset=""></div>
-        <nav class="horizontal-navbar py-4">
+        <nav class="horizontal-navbar pt-3 pb-4">
           <a class="" aria-current="page" href="javascript:void(0)">Demographics</a>
           <a class="" href="javascript:void(0)">Health History</a>
           <a class="active" href="javascript:void(0)">Pharmacy</a>
