--- a/index.html
+++ b/index.html
@@ -40,18 +40,23 @@
         <div class="row gx-3">
           <div class="col-6">
             <div class="box text-center">
-              <div class="mb-3"><img src="./images/pharmacy-building.svg" alt=""></div>
-              <p class="fw-bold">Send to my pharmacy</p>
-              <div><img src="./images/info.svg" alt=""></div>
+              <div class="mb-4"><img src="./images/pharmacy-building.svg" alt=""></div>
+              <p class="fw-bold mb-2">Send to my pharmacy</p>
+              <div>
+                <button type="button" class="btn shadow-none p-0" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-html="true" data-bs-content="<h6 class='popover-title'>Disclaimer:</h6><p class='popover-pag'>You may pay out of pocket or with insurance at the pharmacy. Price may vary</p>">
+                  <img src="./images/info.svg" alt="">
+                </button>
+                
+              </div>
             </div>
           </div>
           <div class="col-6">
             <div class="box text-center">
-              <div class="mb-3"><img src="./images/feather-home.svg" alt=""></div>
-              <p class="fw-bold">Deliver to my address</p>
+              <div class="mb-4"><img src="./images/feather-home.svg" alt=""></div>
+              <p class="fw-bold mb-2">Deliver to my address</p>
               <!-- Button trigger modal -->
               <button type="button" class="btn pricing-btn shadow-none" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                (See pricing)
+                (See pricing)&nbsp;
                 <img src="./images/angle-double-down.svg" alt="" srcset="">
               </button>
 
@@ -77,7 +82,7 @@
                           <p>Lisinopril</p>
                           <p>$9.00</p>
                         </div>
-                        <hr/>
+                        <hr class="mt-2 mb-4"/>
                         <h6 class="text-start ">Delivery options</h6>
                         <div class="d-flex justify-content-between">
                           <p>Same day</p>
@@ -88,7 +93,7 @@
                           <p>$10.00</p>
                         </div>
                         <div class="d-flex justify-content-between">
-                          <p>2-5 days</p>
+                          <p class="mb-0">2-5 days</p>
                           <p class="free">FREE</p>
                         </div>
                       </div>
