Popover related changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <div class="mb-4"><img src="./images/pharmacy-building.svg" alt=""></div>
               <p class="fw-bold mb-2">Send to my pharmacy</p>
               <div>
-                <button type="button" class="btn shadow-none p-0" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-html="true" data-bs-content="<h6 class='popover-title'>Disclaimer:</h6><p class='popover-pag'>You may pay out of pocket or with insurance at the pharmacy. Price may vary</p>">
+                <button type="button" id="id-more-info" class="btn shadow-none p-0" onclick="showMoreInfoPopOver()" data-bs-trigger="manual" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-html="true" data-bs-content="<h6 class='popover-title'>Disclaimer:</h6><p class='popover-pag'>You may pay out of pocket or with insurance at the pharmacy. Price may vary</p>">
                   <img src="./images/info.svg" alt="">
                 </button>
                 
