--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./css/index.css">
 
     <!--google font-->
@@ -62,7 +63,7 @@
 
               <!-- Modal -->
               <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-dialog modal-dialog-centered mx-sm-auto">
                   <div class="modal-content modal-content--radius">
                     <div class="modal-header modal-header--bg">
                       <h5 class="modal-title modal-title--text" id="exampleModalLabel">Medication Price List</h5>
